fixed button misalignment edge case on service page

--- a/src/components/service.module.scss
+++ b/src/components/service.module.scss
@@ -33,6 +33,7 @@
   .buttonGroup {
     >* {
       margin-right: 1rem;
+      margin-bottom: 0.5rem;
     }
   }
 }
